@@ -87,7 +87,8 @@ DAnCE_NodeManager_Module::usage (void)
     "\t-t|--timeout\t\t default timeout in seconds to wait for component server spawn\n"
     "\t-d|--domain-nc [NC]\t Default naming context for domain objects.\n"
     "\t--instance-nc [NC]\t Default naming context for instance registration directives. No argument indicates Domain NC.\n"
-    "\t--best-effort\t\t Instruct the node manager and the default behavior for locality managers to be best effort."
+    "\t--best-effort\t\t Instruct the node manager and the default behavior for locality managers to be best effort.\n"
+    "\t--locality-config\t\t Provide a locality configuration file that is passed to all spawned locality managers.\n"
     "\t-h|help\t\t\t print this help message\n";
 }
 
@@ -111,6 +112,7 @@ DAnCE_NodeManager_Module::parse_args (int argc, ACE_TCHAR * argv[])
   get_opts.long_option (ACE_TEXT("server-args"), ACE_Get_Opt::ARG_REQUIRED);
   get_opts.long_option (ACE_TEXT("timeout"), 't', ACE_Get_Opt::ARG_REQUIRED);
   get_opts.long_option (ACE_TEXT("domain-nc"), 'd', ACE_Get_Opt::ARG_REQUIRED);
+  get_opts.long_option (ACE_TEXT("locality-config"), ACE_Get_Opt::ARG_REQUIRED);
   get_opts.long_option (ACE_TEXT("best-effort"), ACE_Get_Opt::NO_ARG);
   get_opts.long_option (ACE_TEXT("help"), 'h', ACE_Get_Opt::NO_ARG);
   get_opts.long_option (ACE_TEXT("instance-nc"), ACE_Get_Opt::ARG_REQUIRED);
@@ -193,6 +195,14 @@ DAnCE_NodeManager_Module::parse_args (int argc, ACE_TCHAR * argv[])
                             ACE_TEXT("Using provided component server arguments: '%s'\n"),
                             get_opts.opt_arg ()));
               this->options_.server_args_ = get_opts.opt_arg ();
+            }
+          else if (ACE_OS::strcmp (get_opts.long_option (),
+                                   ACE_TEXT("locality-config")) == 0)
+            {
+              DANCE_DEBUG (6, (LM_DEBUG, DLINFO ACE_TEXT("Node_Manager_Module::parse_args - ")
+                               ACE_TEXT("Using locality configuration file <%s>\n"),
+                               get_opts.opt_arg ()));
+              this->options_.locality_config_ = get_opts.opt_arg ();
             }
           else if (ACE_OS::strcmp (get_opts.long_option (),
                                    ACE_TEXT("best-effort")) == 0)
@@ -601,6 +611,12 @@ DAnCE_NodeManager_Module::create_nm_properties (DAnCE::Utility::PROPERTY_MAP &pr
     val <<= CORBA::Any::from_string (CORBA::string_dup (ACE_TEXT_ALWAYS_CHAR (this->options_.server_args_)),0);
     props.bind (DAnCE::LOCALITY_ARGUMENTS, val);
   }
+  if (this->options_.locality_config_)
+    {
+      CORBA::Any val;
+      val <<= CORBA::Any::from_string (CORBA::string_dup (ACE_TEXT_ALWAYS_CHAR (this->options_.locality_config_)), 0);
+      props.bind (DAnCE::DANCE_LM_CONFIGFILE, val);
+    }
   if (this->options_.instance_nc_)
     {
       CORBA::Any val;
